# pablito_estrategia

./: .env.example  .gitignore  pyproject.toml
deploy/: deploy.sh
deploy/systemd/: pm-executor.service  pm-logger.service  pm-strategy.service
scripts/: evaluate_polyrec.py  kill_switch.py  run_logger.py  setup_supabase.py  test_rtds.py
src/: config.py
src/data/: binance_backup.py  clob_client.py  gamma_client.py  logger_service.py  price_consolidator.py  rtds_client.py
src/db/: client.py  schema.sql
src/risk/: kill_switch.py  manager.py
tests/: conftest.py  test_chainlink_resolver.py  test_executor.py  test_features.py  test_risk_manager.py  test_rtds_client.py
