[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-btc-bot"
version = "0.1.0"
description = "Polymarket BTC Up/Down trading bot"
requires-python = ">=3.12"
dependencies = [
    "supabase>=2.9.0",
    "websockets>=13.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "py-clob-client>=0.17.0",
    "python-binance>=1.0.19",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "pydantic>=2.8.0",
    "loguru>=0.7.2",
    "tenacity>=9.0.0",
    "python-telegram-bot>=21.0",
    "click>=8.1.7",
    "rich>=13.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
